--- a/Gui-Test.ipynb
+++ b/Gui-Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 71,
    "id": "a2842774",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 92,
    "id": "62ed3d2d",
    "metadata": {},
    "outputs": [],
@@ -35,15 +35,22 @@
     "text = StringVar()\n",
     "text.set(\"Enter Your data path:\")\n",
     "en = Entry(preprosessing , textvariable=text , width=50)\n",
-    "en.pack(pady = 20)\n",
-    "btn=Button(preprosessing,text=\"Process\" , border=3 , fg=\"blue\" , bg=\"white\" ,padx = 40 ,pady = 10 ,command = lambda:print(en.get()) )\n",
-    "btn.pack()\n",
+    "#en.pack(pady = 20 , padx = 20)\n",
+    "en.place(height = 50 , x = 100 , y = 50)\n",
+    "btn=Button(preprosessing,text=\"split\" , border=3 , fg=\"blue\" , bg=\"white\" ,padx = 40 ,pady = 10 ,command = lambda:print(en.get()) )\n",
+    "btn.pack(pady = 50 , padx = 12)\n",
+    "btn=Button(preprosessing,text=\"stopwords\" , border=3 , fg=\"blue\" , bg=\"white\" ,padx = 40 ,pady = 10 ,command = lambda:print(en.get()) )\n",
+    "btn.pack(pady = 12 , padx = 12)\n",
+    "btn=Button(preprosessing,text=\"stopwords\" , border=3 , fg=\"blue\" , bg=\"white\" ,padx = 40 ,pady = 10 ,command = lambda:print(en.get()) )\n",
+    "btn.pack(pady = 12 , padx = 12)\n",
+    "btn=Button(preprosessing,text=\"root\" , border=3 , fg=\"blue\" , bg=\"white\" ,padx = 40 ,pady = 10 ,command = lambda:print(en.get()) )\n",
+    "btn.pack(pady = 12, padx = 12)\n",
     "#preprosessing.filename = filedialog.askopenfilename(initialdir = \"/D:/testt\" , title = \"Select A file\" , filetypes=((\"txt files\", \"*.txt\") , (\"all files\" ,  \"*.*\")))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 93,
    "id": "32aaf078",
    "metadata": {},
    "outputs": [],
